Explorer/wwwroot/css/composer.css
.composer-container {
  height: 100%;
  display: flex;
  flex-direction: column;
}

.composer-content {
  flex: 1;
  overflow-y: scroll;
  height: 100%;
  width: 100%;
}

.grids {
  display: flex;
}

.grid-selector {
  height: 100%;
  width: 30px;
}

li.nav-item.grid-selector-item {
  display: flex;
}

.grid-outer-container {
  height: 100%;
  width: 100%;
}

.grid-container {
  height: 100%;
  width: 100%;
  padding: 2px;
  display: inline-block;
}

.grid-outer-row {
  display: flex;
}

.grid-row {
  position: relative;
  width: 100%;
  height: 40px;
  margin: 5px 0;
  display: -ms-flexbox;
  display: inline-flex;
  overflow: visible; /* hidden fixes the overflow but hides the gates while dragging! */
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.grid-snap {
  position: absolute;
  width: 40px;
  height: 40px;
  background: transparent;
}

.grid-cell {
  position: relative;
  display: block;
  width: 40px;
  height: 40px;
  margin-left: 10px;
  overflow: visible;
}

.gate {
  width: 40px;
  height: 40px;
  float: left;
  text-align: center;
  z-index: 99;
  cursor: pointer;
  overflow: hidden;
}

.gate.gate-border {
  border: var(--text);
  border-width: 2px;
  border-style: solid;
  background: var(--surface);
}

.gate-name {
  vertical-align: baseline;
  font-size: x-large;
}

.row-id {
  width: 80px;
  min-width: 80px;
  height: 40px;
  line-height: 40px;
  margin: 5px 0;
  padding-left: 5px;
  float: left;
  text-align: left;
  background: var(--accent);
  z-index: 98;
}

.line-container {
  position: absolute;
}

.composer-svg {
  position: absolute;
}

.composer-line {
  stroke: var(--text);
  stroke-width: 2;
}

/* Operation expansion toggle */

#composer-top-bar {
  display: flex;
  overflow: hidden;
}

#tabs-div {
  order: 0;
  flex-grow: 1;
  overflow-x: scroll;
  overflow-y: hidden;
}

#toggle-div {
  order: 1;
  flex-grow: 0;
}

.toggle-group > label {
  font-size: 14px;
}

.toggle-off, .toggle-off:hover {
  color: var(--text);
  background-color: var(--accent);
}

.toggle-handle {
  background-color: white;
}

.placeholder-icon {
  height: 70%;
  fill: var(--surface);
  filter: drop-shadow(0 0.2rem 0.8rem var(--popup));
}

.placeholder-icon:hover {
  fill: var(--logo);
}

